--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose-sequence": "^5.3.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
